# middlewares.js
@@ -8,6 +8,7 @@ const jose = require('node-jose');
 const fs = require('fs');
 const abortController = require('abort-controller');
 const nock = require('nock')
+const axios = require('axios')
 require('dotenv').config();
 
 exports.verifyToken = async (req, res, next) => {
@@ -42,7 +43,7 @@ exports.verifyToken = async (req, res, next) => {
 
 exports.processTransactions = async () => {
 
-    let serverResponseAsJson, serverResponseAsPlainText, serverResponseAsObject, timeout, bankTo;
+    // let serverResponseAsJson, serverResponseAsPlainText, serverResponseAsObject, timeout, bankTo;
 
     // Init jose keystore
     const privateKey = fs.readFileSync('./keys/private.key').toString();
@@ -55,9 +56,9 @@ exports.processTransactions = async () => {
     // Loop through each transaction and send a request
     pendingTransactions.forEach(async transaction => {
 
+        let oServerResponse, timeout, bankTo;
+
         console.log('loop: Processing transaction...');
-        console.log(transaction)
-        console.log(transaction.createdAt)
 
         // Calculate transaction expiry time
         transactionExpiryTime = new Date(
@@ -70,17 +71,11 @@ exports.processTransactions = async () => {
 
             // Set transaction status to failed
             transaction.status = 'failed',
-                transaction.statusDetail = 'Timeout reached',
-                transaction.save();
+            transaction.statusDetail = 'Timeout reached',
+            transaction.save();
 
             // Go to next transaction
             return
-        }
-
-        // Bundle together transaction and its abortController
-        const transactionData = {
-            transaction: transaction,
-            abortController: new abortController()
         }
 
         // Set transaction status to "in progress"
@@ -128,7 +123,7 @@ exports.processTransactions = async () => {
         }
 
         // Create jwt
-        const jwt = await jose.JWK.createSign({
+        const jwt = await jose.JWS.createSign({
             alg: 'RS256',
             format: 'compact'
         }, key).update(JSON.stringify({
@@ -143,92 +138,127 @@ exports.processTransactions = async () => {
         // Send request to remote bank
 
         try {
-            console.log('loop: Making request to ' + bankTo.transactionUrl);
 
-            // Abort connection after 1 second
-            timeout = setTimeout(() => {
-                console.log('loop: Aborting long running transaction');
+            // Actually send the request
+            const nock = require('nock');
+            let nockScope;
 
-                // Abort the request
-                transactionData.abortController.abort()
-
-                // Set transaction status back to pending
-                transaction.status = 'pending';
-                transaction.statusDetail = 'Server is not responding';
-                transaction.save();
-            }, 1000)
-
-            if (process.env.TEST_MODE === 'true') {
-                const scope = nock(bankTo.transactionUrl.hostname)
+            if(process.env.TEST_MODE === 'true') {
+                const nockUrl = new URL(bankTo.transactionUrl);
+                console.log('Nocking ' + JSON.stringify(nockUrl));
+                nockScope = nock(`${nockUrl.protocol}//${nockUrl.host}`)
                     .persist()
-                    .post(bankTo.transactionUrl.pathname)
-                    .reply(200, 
-                            {
-                                receiverName: "Vastu Võtja"
-                            }
-                        )
+                    .post(nockUrl.pathname)
+                    .reply(200, {receiverName: 'foobar'})
 
             }
-            // Actually send the request
-            serverResponseAsObject = await fetch(bankTo.transactionUrl, {
-                signal: transactionData.abortController.signal,
-                method: 'POST',
-                body: JSON.stringify({ jwt }),
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            })
 
-            // Get server response as plain text
-            serverResponseAsPlainText = await serverResponseAsObject.text()
+            oServerResponse = await axios.post(bankTo.transactionUrl, {jwt}, {timeout: 2000})
+
+            // Debug log
+            console.log('loop: Made request to ' + bankTo.transactionUrl + ':');
+            console.log(
+                'POST ' + (new URL(bankTo.transactionUrl)).pathname + '\n'
+                + Object.entries(oServerResponse.config.headers).map((h) => h[0] + ': ' + h[1]).join("\n")
+                + '\n\n'
+                + JSON.stringify({jwt}, null, 4))
 
         }
         catch (e) {
             console.log('loop: Making request to another bank failed with the following message: ' + e.message);
+
+            let url = e.response.config.url
+            let request = e.request._header + e.response.config.data
+            let responseFirstLine = e.response.status + ' ' + e.response.statusText
+            let responseHeaders = Object.entries(e.response.headers.map((h) => h[0] + ': ' + h[1]).join("\n"))
+            let responseBody = JSON.stringify(e.response.data)
+
+            let errorText =
+                '\nWhile making this request to ' + url + ':\n'
+                + '\n---BEGIN REQUEST---\n'
+                + request
+                + '\n---END REQUEST---\n'
+                + '\nThe following response was given:\n'
+                + '\n---BEGIN RESPONSE---\n'
+                + responseFirstLine + "\n"
+                + responseHeaders + "\n"
+                + "\n"
+                + responseBody
+                + '\n---END RESPONSE---\n'
+
+            console.log(errorText);
+
+            transaction.status = 'failed'
+            transaction.statusDetail = errorText
+            transaction.save()
+
+            return
         }
 
         // Cancel aborting
-        clearTimeout(timeout);
+        clearTimeout(timeout)
 
-        // Server did not respond (we aborted before that)
-        if (typeof serverResponseAsPlainText === 'undefined') {
-
-            // Stop processing this transaction for now and take the next one
-            return
+        // Print friendly error messages if something is missing
+        if(!oServerResponse) {
+            console.log('loop: Unable to get server response')
         }
 
-        // Attempt to parse server response from text to JSON
-        try {
-            serverResponseAsJson = JSON.parse(serverResponseAsPlainText)
+        if(!oServerResponse.status) {
+            console.log('loop: Unable to get status from server response')
         }
-        catch (e) {
+        else {
+            console.log('loop: Server response status was: ' + oServerResponse.status)
+        }
 
-            // Log the error
-            console.log('loop: ' + e.message + ". Response was: " + serverResponseAsPlainText)
-            transaction.status = 'failed'
-            transaction.statusDetail = 'The other bank said ' + serverResponseAsPlainText
-            transactionData.abortController = null
-            transaction.save()
+        if(!oServerResponse.data) {
+            console.log('loop: Unable to get body from server response')
+        }
+        else {
+            console.log('loop: Server response was: ' + oServerResponse.status + ' ' + oServerResponse.statusText);
+            console.log(Object.entries(oServerResponse.request.res.headers).map((h) => h[0] + ': ' + h[1]).join("\n"));
+            console.log('');
+            console.log(oServerResponse.data);
+        }
 
-            // Go to next transaction
-            return
+        if(!oServerResponse.data.receiverName) {
+            console.log('loop: Unable to get receiverName from server response body')
+        }
+        else {
+            console.log('loop: receiverName was ' + oServerResponse.data.receiverName);
         }
 
         // Log bad responses from server to transaction statusDetail
-        if (serverResponseAsObject.status < 200 || serverResponseAsObject.status >= 300) {
-            console.log('loop: Server response was ' + serverResponseAsObject.status);
+        if (oServerResponse.status < 200 || oServerResponse.status >= 300) {
+            console.log('loop: Server response status was not positive. Setting transaction status to failed');
             transaction.status = 'failed'
-            transaction.statusDetail = typeof serverResponseAsJson.error !== 'undefined' ?
-                serverResponseAsJson.error : serverResponseAsPlainText
+            transaction.statusDetail = typeof oServerResponse.data.error !== 'undefined' ?
+                oServerResponse.data.error : JSON.stringify(oServerResponse.data)
+            transaction.save()
+            return
+        }
+
+        if(!oServerResponse.data) {
+            console.log('loop: Server did not return JSON or the content-type was not json');
+            transaction.status = 'failed'
+            transaction.statusDetail = 'No JSON in response. The response was: ' + oServerResponse.data
+            transaction.save()
+            return
+        }
+
+        if(!oServerResponse.data.receiverName) {
+            console.log('loop: Server response did not have receiverName. It was: ' + oServerResponse.data);
+            transaction.status = 'failed'
+            transaction.statusDetail = typeof oServerResponse.data.error !== 'undefined' ?
+                oServerResponse.data.error : JSON.stringify(oServerResponse.data)
             transaction.save()
             return
         }
 
         // Add receiverName to transaction
-        transaction.receiverName = serverResponseAsJson.receiverName;
+        transaction.receiverName = oServerResponse.data.receiverName;
 
         // Deduct accountFrom
-        account = await accountModel.findOne({ number: transaction.accountFrom })
+        const account = await accountModel.findOne({ number: transaction.accountFrom })
         account.balance = account.balance - transaction.amount
         account.save();
 
@@ -247,42 +277,48 @@ exports.processTransactions = async () => {
 
 /**
  * Refreshes the list of known banks from central bank
- * @returns {Promise<{error: *}>}
+ * @returns void
  */
 
 exports.refreshBanksFromCentralBank = async () => {
 
-    const nock = require('nock')
-
-    if (process.env.TEST_MODE === 'true') {
-        const scope = nock(process.env.CENTRAL_BANK_URL)
-            .persist()
-            .get('/banks')
-            .reply(200, [
-                {
-                    "name": "Bank A",
-                    "owners": "John Doe",
-                    "jwksUrl": "https://banka.com/jwks",
-                    "transactionUrl": "https://banka.com/transactions/b2b",
-                    "bankPrefix": "aaa"
-                },
-                {
-                    "name": "Bank B",
-                    "owners": "Jane Doe",
-                    "jwksUrl": "https://bankb.com/jwks",
-                    "transactionUrl": "https://bankb.com/transactions/b2b",
-                    "bankPrefix": "bbb"
-                }
-            ])
-    }
     try {
+        let nockScope, nock
+
         console.log('Refreshing banks')
 
-        console.log('Attempting to contact central bank at ' + `${process.env.CENTRAL_BANK_URL}/banks`)
-        let banks = await fetch(`${process.env.CENTRAL_BANK_URL}/banks`, {
+        // Mock central bank responses in TEST_MODE
+        if (process.env.TEST_MODE === 'true') {
+            console.log('TEST_MODE = true')
+            nock = require('nock')
+            nockScope = nock(process.env.CENTRAL_BANK_URL)
+                .persist()
+                .get('/banks')
+                .reply(200, [
+                    {
+                        "name": "Bank A",
+                        "owners": "John Doe",
+                        "jwksUrl": "http://localhost:1234/jwks",
+                        "transactionUrl": "http://localhost:1234/transactions/b2b",
+                        "bankPrefix": "843"
+                    },
+                    {
+                        "name": "Bank B",
+                        "owners": "Jane Doe",
+                        "jwksUrl": "https://bankb.com/jwks",
+                        "transactionUrl": "https://bankb.com/transactions/b2b",
+                        "bankPrefix": "bbb"
+                    }
+                ])
+        }
+        
+        console.log('refreshBanksFromCentralBank: Attempting to contact central bank at '+`${process.env.CENTRAL_BANK_URL}/banks`)
+        banks = await fetch(`${process.env.CENTRAL_BANK_URL}/banks`, {
             headers: { 'Api-Key': process.env.CENTRAL_BANK_API_KEY }
         })
             .then(responseText => responseText.json())
+
+        console.log('refreshBanksFromCentralBank: Central Bank response was: ' + JSON.stringify(banks));
 
         // Delete all old banks
         await bankModel.deleteMany();
@@ -291,7 +327,7 @@ exports.refreshBanksFromCentralBank = async () => {
         const bulk = bankModel.collection.initializeUnorderedBulkOp();
 
         // Add banks to queue to be inserted into database
-        //console.log(process.env.CENTRAL_BANK_API_KEY)
+        console.log(banks)
         banks.forEach(bank => {
             bulk.insert(bank);
         })
@@ -300,6 +336,8 @@ exports.refreshBanksFromCentralBank = async () => {
         await bulk.execute();
     }
     catch (e) {
+        console.log('Failed to communicate with the central bank');
+        console.log(e.message);
         return { error: e.message }
     }
 
